# conda-ci-test

./: CMakeLists.txt  README.md
.github/workflows/: build_conda_pkgs.yml
cmake/: version.cmake
conda-recepie/: build_cpp_lib.sh  build_python_pkg.sh  environment.yml  meta.yaml
libnoop/: CMakeLists.txt
libnoop/app/: main.cpp
libnoop/include/noop/: noop.h
libnoop/src/: noop.cpp
python/: setup.cfg
python/noop/: __init__.py  msg.py
