cmake_minimum_required(VERSION 3.12)
project(noop)
set(PROJECT_VERSION 0.1.0)
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")

if($ENV{CONDA_BUILD})
  set(CMAKE_INSTALL_LIBDIR "lib")
endif()

string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UPPER)
string(TOLOWER "${PROJECT_NAME}" PROJECT_NAME_LOWER)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
# set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})


add_subdirectory(libnoop)